2001-09-24  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in: Typos happen.

	* x.pl.in (x_parse_serverlayout_screen): Rewrote.
	Fixes bug #10790.

	* users-conf.in: Added missing report keywords. Moved one
	here from report.pl.in.

2001-09-21  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in: Found and fixed some small typos. 

2001-09-21  Arturo Espinosa Aldama  <arturo@ximian.com>

	* util.pl.in (xst_process_result_collect): Exhaust buffer.

2001-09-21  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_probe_collect): Use xst_process_result_collect.

	* util.pl.in (xst_process_result_collect): Implemented to hide
	implementation details.

	* x.pl.in (x_probe_scan): Return array.

	* util.pl.in (xst_process_list_check_ready): Don't force second
	argument to array. Make an array of it if needed.
	(xst_process_fork): Taught to deal with arrays also.

	* x.pl.in (x_probe_run): Fork new X processes to avoid lockups.
	(x_probe_collect): Implement.
	(x_probe_scan): Implement.

Tue Sep 18 11:46:35 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* service.pl.in (xst_service_sysv_install_script): reversed
	return value interpretation of copy.

	* report.pl.in: typo in new file_copy_failed entry.
	(xst_report): validate major, and better unk minor handling.
	(xst_report): also spit reports if they have debug major.

	* service.pl.in (xst_service_sysv_install_script): Oops: chmod
	the installed initd script, not the resource file! :)

Mon Sep 17 11:36:47 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

        * Other Perl style changes in xml, network, service and other
	places.
	
	* file.pl.in (xst_file_rmtree): Got "Bad symbol for filehandle"
	fatal error with this code in Debian. Dunno why it appeared now,
	so I used something more "standard". Any comments on this?

	* ishare.pl.in: Ported to debian-2.2. Untested.

	* service.pl.in (xst_service_sysv_install_script): installs an
	initd script from the filesdir.

	* Makefile.am: Replace filesdir too.
