@@ -1,3 +1,9 @@
+2001-09-25  Arturo Espinosa Aldama  <arturo@ximian.com>
+
+	* network.pl.in (xst_network_rh_get_smb_desc): This removes
+	the default "Samba Server" smb.conf string from redhat-like
+	distros.
+
 2001-09-24  Tambet Ingo  <tambet@ximian.com>
 
 	* users-conf.in: Typos happen.
